--- a/src/components/Journals/journals-large.scss
+++ b/src/components/Journals/journals-large.scss
@@ -2,7 +2,7 @@
 
 .journal {
   position: relative;
-  z-index: 9;
+  z-index: 4 !important;
   padding: calc($magic-number * 2) calc($magic-number * 1);
 
   background-color: $background-color;
@@ -16,7 +16,6 @@
     font-family: "Syne";
     font-size: 9.6rem;
     font-weight: 700;
-    z-index: 11;
   }
 }
 
@@ -49,6 +48,7 @@
 .project-title {
   position: relative;
   display: block;
+  text-decoration: none;
 
   margin-top: 0;
   margin-bottom: calc($magic-number / 4);
@@ -60,12 +60,10 @@
   user-select: none;
   transition: opacity $duration-medium $ease-out,
     transform $duration-medium $ease-out;
-  z-index: 2;
 }
 
 .project-list {
   position: relative;
-  z-index: 2;
 
   article {
     display: inline-block;
@@ -109,7 +107,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 1;
 
   width: 100%;
   height: 100%;
